--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "fsevents": "^2.3.1",
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "react-helmet": "^5.2.0"
+    "gatsby": "^1.9.279",
+    "gatsby-link": "^1.6.46",
+    "gatsby-plugin-react-helmet": "^2.0.11",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^5.2.1",
+    "styled-components": "^5.2.1"
   },
   "keywords": [
     "gatsby"
@@ -21,7 +24,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.12.0"
+    "prettier": "^1.19.1"
   },
   "repository": {
     "type": "git",
