--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "fsevents": "^2.3.1",
-    "gatsby": "^1.9.279",
+    "gatsby": "^2.0.0",
     "gatsby-link": "^1.6.46",
+    "gatsby-plugin-google-analytics": "^2.10.0",
+    "gatsby-plugin-netlify": "^2.10.0",
     "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-sass": "^3.1.0",
+    "gatsby-source-contentful": "^4.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
   },
   "keywords": [
