--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "fsevents": "^2.3.1",
-    "gatsby": "^2.0.0",
-    "gatsby-link": "^1.6.46",
+    "gatsby": "^2.33.1",
+    "gatsby-link": "next",
     "gatsby-plugin-google-analytics": "^2.10.0",
     "gatsby-plugin-netlify": "^2.10.0",
-    "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-sass": "^3.1.0",
+    "gatsby-plugin-typography": "^2.11.0",
+    "gatsby-react-router-scroll": "^3.6.0",
     "gatsby-source-contentful": "^4.5.1",
+    "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1"
+    "react-typography": "^0.16.19",
+    "styled-components": "^5.2.1",
+    "typography": "^0.16.19",
+    "typography-theme-fairy-gates": "^0.16.19"
   },
   "keywords": [
     "gatsby"
@@ -29,6 +34,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gatsby-plugin-react-helmet": "^2.0.11",
     "prettier": "^1.19.1"
   },
   "repository": {
